@@ -1,3 +1,6 @@
+2013-02-28
+ * initDB with connection name parameter, allowning multiple connection for multi-thread applications
+
 2013-02-26
  * added bb_observatory_id to plan table
 
